RichwoodNew/src/objects/Email_Link__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Email Links</relationshipLabel>
        <relationshipName>Email_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Click_Count__c</fullName>
        <label>Click Count</label>
        <summaryForeignKey>Click_Through__c.Email_Link__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Destination_URL__c</fullName>
        <label>Destination URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_Identifier__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Link Identifier</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Link_to_Use__c</fullName>
        <formula>&quot;http://relyonrw.force.com/tracking?linkid=&quot;&amp; Link_Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Use</label>
        <type>Text</type>
    </fields>
    <label>Email Link</label>
    <nameField>
        <label>Email Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>